--- a/assignment-1.html
+++ b/assignment-1.html
@@ -23,7 +23,7 @@
     <hr>
 
     <h2>Lists</h2><br><br>
-    <a href="../Assignment 1/lists.html" target="_blank">Click here</a>
+    <a href="list.html" target="_blank">Click here</a>
 
 </body>
 
