--- a/lists.html
+++ b/lists.html
@@ -77,7 +77,7 @@
         <li>Lemonade</li>
     </ul>
 
-       <a href="./index.html">index</a> 
+       <a href="https://rawcdn.githack.com/spsingh-26/Html/1fe64a0aeb2515c0a25aa081a0c817a73e97d600/assignment-1.html">index</a> 
 
 </body>
 </html>
