--- a/assignment-1.html
+++ b/assignment-1.html
@@ -23,7 +23,7 @@
     <hr>
 
     <h2>Lists</h2><br><br>
-    <a href="list.html" target="_blank">Click here</a>
+    <a href="https://rawcdn.githack.com/spsingh-26/Html/1fe64a0aeb2515c0a25aa081a0c817a73e97d600/lists.html" target="_blank">Click here</a>
 
 </body>
 
